# ChangeLog for NetApp Cacti scripts
# Copyright 2008-2008 Chris Gianelloni; Distributed under the GPL v2
# $Header: $

  14 Nov 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  +cacti/netapp/scripts/get_netapp_disk_rbytes.pl,
  +cacti/netapp/scripts/get_netapp_disk_wbytes.pl:
  Adding a script to get the disk read/write bytes.

  14 Nov 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  cacti/netapp/scripts/ss_netapp.php:
  It helps if I add the script.

  14 Nov 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  cacti/netapp/scripts/ss_netapp.php:
  Add fcp to local variable names.

  07 Nov 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  cacti/netapp/scripts/ss_netapp.php:
  Only do the SNMP get on licenses where we detect support on the filer.

  07 Nov 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  cacti/netapp/scripts/ss_netapp.php:
  Prepend fcp to variables in the ss_netapp_fcp function.

  07 Nov 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  cacti/netapp/scripts/ss_netapp.php:
  Change the OID calls in the ss_netapp_add_high_low function to work with
  both indexed and non-indexed OID trees. This allows us to use this
  function for adding FCP, iSCSI, NFS, and others.

  24 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  cacti/netapp/templates/cacti_host_template_netapp_filer.xml:
  Updated the template with updates required for the latest scripts and XML.

  24 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  cacti/netapp/scripts/ss_netapp.php:
  Cleaning the script up a little bit. This is working in production.

  24 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  cacti/netapp/script_server/netapp-luns.xml,
  cacti/netapp/script_server/netapp-volumes.xml:
  Clean up the XML for the volumes query and add lun/vol to the proper
  files.

  24 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  cacti/netapp/scripts/ss_netapp.php:
  Refactor a bit and clean up the query interface.

  24 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>